feat: integrate ADK agent hierarchy, A2A schema contracts, and video frame support
- Add core/schemas.py: 7 JSON schema contracts (StoryRequest, StoryChunk,
  ValidatedChunk, RiddleRequest, RiddlePayload, ImageRequest, ImageResult)
  with A2ASchemaValidator singleton and SchemaViolationError
- Add orchestrator/a2a_router.py: A2A task routing with schema enforcement,
  agent cards, retry-with-correction, streaming validation, safe fallbacks
- Add agents/memory_agent.py: ADK-style memory agent for session persistence
- Add services/storage_client.py: Cloud Storage operations for media

- Update core/models.py: Add VIDEO_FRAME client message type, INTERRUPTED
  server message type, A2ATask and A2ATaskState models
- Update agents/base_agent.py: Add ADK-compatible execute() and
  execute_streaming() interfaces, _generate_structured_json() helper
- Update agents/story_agent.py: Add StoryChunk schema output with
  explicit cultural_claims[], structured JSON generation
- Update agents/riddle_agent.py: Add RiddlePayload schema output,
  structured JSON generation, payload parsing and fixing
- Update agents/cultural_agent.py: Restructure knowledge base to
  verified dicts, add validate_chunk(dict)->ValidatedChunk,
  validate_agent_response() backward compat, KB-based claim checking
- Update agents/visual_agent.py: Add ADK execute() returning ImageResult,
  schema validation support
- Update orchestrator/primary_orchestrator.py: A2A task creation for
  function calls, handle_video_frame(), INTERRUPTED message emission
- Update orchestrator/agent_dispatcher.py: Schema validation on image
  dispatch, use validate_agent_response() for cultural grounding
- Update gateway/websocket_handler.py: Route VIDEO_FRAME messages
- Update services/gemini_client.py: Add send_video_frame() for vision

- Update requirements.txt: Add google-adk, google-a2a, jsonschema
- Add tests/test_schemas.py: 30+ schema contract tests
- Update tests/test_orchestrator.py: Fix for new data structures
- Update 

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,37 @@
 # ─────────────────────────────────────────────────
-# HadithiAI Live — Python Dependencies
+# HadithiAI Live -- Python Dependencies
 # ─────────────────────────────────────────────────
 
-# ── Web Framework & Server ──
+# -- Web Framework & Server --
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
 websockets==14.1
 python-multipart==0.0.19
 
-# ── Google Cloud ──
+# -- Google Cloud --
 google-cloud-firestore==2.19.0
 google-cloud-storage==2.19.0
 google-cloud-aiplatform==1.74.0
 google-cloud-logging==3.11.3
 google-genai==1.1.0
 
-# ── Configuration ──
+# -- Google ADK & A2A --
+google-adk>=0.5.0
+google-a2a>=0.2.0
+
+# -- Schema Validation --
+jsonschema>=4.20.0
+
+# -- Configuration --
 pydantic==2.10.4
 pydantic-settings==2.7.1
 python-dotenv==1.0.1
 
-# ── Async Utilities ──
+# -- Async Utilities --
 aiohttp==3.11.11
 aiofiles==24.1.0
 
-# ── Observability ──
+# -- Observability --
 opentelemetry-api==1.29.0
 opentelemetry-sdk==1.29.0
 opentelemetry-exporter-gcp-trace==1.9.0
